# multisource-candidate-data-transformer

./: README.md  pyproject.toml  requirements.txt
config/: custom_config_example.json  default_schema.json  source_trust.json
data/sample_inputs/: ats_records.json  github_profiles.json  recruiter_export.csv
data/sample_inputs/resumes/: sample_resume.txt
data/sample_outputs/: .gitkeep
src/: main.py  pipeline.py
src/extractors/: ats_json_extractor.py  base.py  csv_extractor.py  github_extractor.py  resume_extractor.py
src/llm/: bedrock_client.py
src/merger/: conflict_resolver.py  entity_resolver.py
src/models/: canonical.py  config.py
src/normalizers/: date_normalizer.py  location_normalizer.py  phone_normalizer.py  skill_normalizer.py
src/projection/: projector.py
src/scoring/: confidence.py
src/validation/: validator.py
tests/: test_edge_cases.py  test_merger.py  test_normalizers.py  test_pipeline_e2e.py  test_projection.py
